...
                .onSuccess {
                    _uiState.value = _uiState.value.copy(isLoading = false)
                    _navEvent.send(Unit)
                }
                .onFailure { e ->
                    val message = when (e) {
                        is InvalidCredentialsException -> "Usuario o contraseña incorrectos. Inténtalo de nuevo."
                        else -> "Error de conexión. Verifique su red."
                    }
                    _uiState.value = _uiState.value.copy(
                        isLoading = false,
                        usernameError = e is InvalidCredentialsException,
                        passwordError = e is InvalidCredentialsException,
...
